# TestOpenCl

./: .cproject  .project  CMakeLists.txt  README.md  main.cpp
src/: CMakeLists.txt  Makefile  cmake_install.cmake
